Catalog_actualizado/grammar/CatalogParser.java
// Generated from Catalog.g4 by ANTLR 4.5.1
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class CatalogParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.5.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		PLUS=1, MINUS=2, TIMES=3, DIV=4, ASSIGN=5, SEMI=6, LPAREN=7, RPAREN=8, 
		LBRACE=9, RBRACE=10, PERIOD=11, EQ=12, NOTEQ=13, GREAT=14, LESS=15, GREATEQ=16, 
		LESSEQ=17, AND=18, OR=19, TRUE=20, FALSE=21, PRINT=22, IF=23, COPY=24, 
		MOVE=25, DELETE=26, FOREACH=27, LETTER=28, NUMBER=29, UNDERSC=30, IN=31, 
		INSIDE=32, SORT=33, ID=34, VAR=35, STRING=36, WS=37, COMMENTS=38, STATEMENTS=39, 
		REVERSE=40, FOR=41;
	public static final int
		RULE_file = 0, RULE_stmt = 1, RULE_or = 2, RULE_and = 3, RULE_eqneq = 4, 
		RULE_comp = 5, RULE_addsub = 6, RULE_multdiv = 7, RULE_pattern = 8, RULE_property = 9, 
		RULE_basic = 10, RULE_foreach = 11, RULE_sort = 12, RULE_filelist = 13;
	public static final String[] ruleNames = {
		"file", "stmt", "or", "and", "eqneq", "comp", "addsub", "multdiv", "pattern", 
		"property", "basic", "foreach", "sort", "filelist"
	};

	private static final String[] _LITERAL_NAMES = {
		null, "'+'", "'-'", "'*'", "'/'", "'='", "';'", "'('", "')'", "'{'", "'}'", 
		"'.'", "'=='", "'!='", "'>'", "'<'", "'>='", "'<='", "'&&'", "'||'", "'true'", 
		"'false'", "'print'", "'if'", "'cp'", "'mv'", "'del'", "'foreach'", null, 
		null, "'_'", "'in'", "'inside'", "'sortby'"
	};
	private static final String[] _SYMBOLIC_NAMES = {
		null, "PLUS", "MINUS", "TIMES", "DIV", "ASSIGN", "SEMI", "LPAREN", "RPAREN", 
		"LBRACE", "RBRACE", "PERIOD", "EQ", "NOTEQ", "GREAT", "LESS", "GREATEQ", 
		"LESSEQ", "AND", "OR", "TRUE", "FALSE", "PRINT", "IF", "COPY", "MOVE", 
		"DELETE", "FOREACH", "LETTER", "NUMBER", "UNDERSC", "IN", "INSIDE", "SORT", 
		"ID", "VAR", "STRING", "WS", "COMMENTS", "STATEMENTS", "REVERSE", "FOR"
	};
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "Catalog.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }


	    CatalogTable ctlTable = new CatalogTable(); // stores variables
	    CatalogFiles ctlFiles = new CatalogFiles(); // essential file operations

	public CatalogParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}
	public static class FileContext extends ParserRuleContext {
		public CatalogType a;
		public TerminalNode EOF() { return getToken(CatalogParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(CatalogParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(CatalogParser.SEMI, i);
		}
		public FileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_file; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitFile(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FileContext file() throws RecognitionException {
		FileContext _localctx = new FileContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_file);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(33);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << LPAREN) | (1L << TRUE) | (1L << FALSE) | (1L << PRINT) | (1L << IF) | (1L << COPY) | (1L << MOVE) | (1L << DELETE) | (1L << FOREACH) | (1L << NUMBER) | (1L << ID) | (1L << VAR) | (1L << STRING))) != 0)) {
				{
				{
				setState(28);
				stmt();
				setState(29);
				match(SEMI);
				}
				}
				setState(35);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(36);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public CatalogType r;
		public CatalogType r; CatalogType a; CatalogType ; b;
		public TerminalNode PRINT() { return getToken(CatalogParser.PRINT, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public TerminalNode STRING() { return getToken(CatalogParser.STRING, 0); }
		public TerminalNode NUMBER() { return getToken(CatalogParser.NUMBER, 0); }
		public TerminalNode IF() { return getToken(CatalogParser.IF, 0); }
		public OrContext or() {
			return getRuleContext(OrContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CatalogParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CatalogParser.RBRACE, 0); }
		public List<TerminalNode> SEMI() { return getTokens(CatalogParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(CatalogParser.SEMI, i);
		}
		public TerminalNode COPY() { return getToken(CatalogParser.COPY, 0); }
		public TerminalNode MOVE() { return getToken(CatalogParser.MOVE, 0); }
		public TerminalNode DELETE() { return getToken(CatalogParser.DELETE, 0); }
		public ForeachContext foreach() {
			return getRuleContext(ForeachContext.class,0);
		}
		public TerminalNode VAR() { return getToken(CatalogParser.VAR, 0); }
		public TerminalNode ASSIGN() { return getToken(CatalogParser.ASSIGN, 0); }
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitStmt(this);
			else return visitor.visitChildren(this);
		}
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		int _la;
		try {
			setState(72);
			switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(38);
				match(PRINT);
				setState(42);
				switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
				case 1:
					{
					setState(39);
					stmt();
					}
					break;
				case 2:
					{
					setState(40);
					match(STRING);
					}
					break;
				case 3:
					{
					setState(41);
					match(NUMBER);
					}
					break;
				}
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(44);
				match(IF);
				setState(45);
				or();
				setState(46);
				match(LBRACE);
				setState(52);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << MINUS) | (1L << LPAREN) | (1L << TRUE) | (1L << FALSE) | (1L << PRINT) | (1L << IF) | (1L << COPY) | (1L << MOVE) | (1L << DELETE) | (1L << FOREACH) | (1L << NUMBER) | (1L << ID) | (1L << VAR) | (1L << STRING))) != 0)) {
					{
					{
					setState(47);
					stmt();
					setState(48);
					match(SEMI);
					}
					}
					setState(54);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				setState(55);
				match(RBRACE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(57);
				match(COPY);
				setState(58);
				stmt();
				setState(59);
				match(STRING);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(61);
				match(MOVE);
				setState(62);
				stmt();
				setState(63);
				match(STRING);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(65);
				match(DELETE);
				setState(66);
				stmt();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(67);
				foreach();
				}
				break;
			case 7:
				enterOuterAlt(_localctx, 7);
				{
				setState(68);
				match(VAR);
				setState(69);
				match(ASSIGN);
				setState(70);
				stmt();
				}
				break;
			case 8:
				enterOuterAlt(_localctx, 8);
				{
				setState(71);
				or();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OrContext extends ParserRuleContext {
		public List<AndContext> and() {
			return getRuleContexts(AndContext.class);
		}
		public AndContext and(int i) {
			return getRuleContext(AndContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(CatalogParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(CatalogParser.OR, i);
		}
		public OrContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_or; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitOr(this);
			else return visitor.visitChildren(this);
		}
	}

	public final OrContext or() throws RecognitionException {
		OrContext _localctx = new OrContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_or);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			and();
			setState(79);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				setState(75);
				match(OR);
				setState(76);
				and();
				}
				}
				setState(81);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AndContext extends ParserRuleContext {
		public List<EqneqContext> eqneq() {
			return getRuleContexts(EqneqContext.class);
		}
		public EqneqContext eqneq(int i) {
			return getRuleContext(EqneqContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(CatalogParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(CatalogParser.AND, i);
		}
		public AndContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_and; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitAnd(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AndContext and() throws RecognitionException {
		AndContext _localctx = new AndContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_and);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(82);
			eqneq();
			setState(87);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==AND) {
				{
				{
				setState(83);
				match(AND);
				setState(84);
				eqneq();
				}
				}
				setState(89);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class EqneqContext extends ParserRuleContext {
		public List<CompContext> comp() {
			return getRuleContexts(CompContext.class);
		}
		public CompContext comp(int i) {
			return getRuleContext(CompContext.class,i);
		}
		public List<TerminalNode> EQ() { return getTokens(CatalogParser.EQ); }
		public TerminalNode EQ(int i) {
			return getToken(CatalogParser.EQ, i);
		}
		public List<TerminalNode> NOTEQ() { return getTokens(CatalogParser.NOTEQ); }
		public TerminalNode NOTEQ(int i) {
			return getToken(CatalogParser.NOTEQ, i);
		}
		public EqneqContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_eqneq; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitEqneq(this);
			else return visitor.visitChildren(this);
		}
	}

	public final EqneqContext eqneq() throws RecognitionException {
		EqneqContext _localctx = new EqneqContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_eqneq);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(90);
			comp();
			setState(95);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==EQ || _la==NOTEQ) {
				{
				{
				setState(91);
				_la = _input.LA(1);
				if ( !(_la==EQ || _la==NOTEQ) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(92);
				comp();
				}
				}
				setState(97);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class CompContext extends ParserRuleContext {
		public List<AddsubContext> addsub() {
			return getRuleContexts(AddsubContext.class);
		}
		public AddsubContext addsub(int i) {
			return getRuleContext(AddsubContext.class,i);
		}
		public List<TerminalNode> LESS() { return getTokens(CatalogParser.LESS); }
		public TerminalNode LESS(int i) {
			return getToken(CatalogParser.LESS, i);
		}
		public List<TerminalNode> LESSEQ() { return getTokens(CatalogParser.LESSEQ); }
		public TerminalNode LESSEQ(int i) {
			return getToken(CatalogParser.LESSEQ, i);
		}
		public List<TerminalNode> GREAT() { return getTokens(CatalogParser.GREAT); }
		public TerminalNode GREAT(int i) {
			return getToken(CatalogParser.GREAT, i);
		}
		public List<TerminalNode> GREATEQ() { return getTokens(CatalogParser.GREATEQ); }
		public TerminalNode GREATEQ(int i) {
			return getToken(CatalogParser.GREATEQ, i);
		}
		public CompContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_comp; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitComp(this);
			else return visitor.visitChildren(this);
		}
	}

	public final CompContext comp() throws RecognitionException {
		CompContext _localctx = new CompContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_comp);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(98);
			addsub();
			setState(103);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GREAT) | (1L << LESS) | (1L << GREATEQ) | (1L << LESSEQ))) != 0)) {
				{
				{
				setState(99);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << GREAT) | (1L << LESS) | (1L << GREATEQ) | (1L << LESSEQ))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(100);
				addsub();
				}
				}
				setState(105);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class AddsubContext extends ParserRuleContext {
		public List<MultdivContext> multdiv() {
			return getRuleContexts(MultdivContext.class);
		}
		public MultdivContext multdiv(int i) {
			return getRuleContext(MultdivContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(CatalogParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(CatalogParser.PLUS, i);
		}
		public List<TerminalNode> MINUS() { return getTokens(CatalogParser.MINUS); }
		public TerminalNode MINUS(int i) {
			return getToken(CatalogParser.MINUS, i);
		}
		public AddsubContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_addsub; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitAddsub(this);
			else return visitor.visitChildren(this);
		}
	}

	public final AddsubContext addsub() throws RecognitionException {
		AddsubContext _localctx = new AddsubContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_addsub);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			multdiv();
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MINUS) {
				{
				{
				setState(107);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MINUS) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(108);
				multdiv();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class MultdivContext extends ParserRuleContext {
		public List<PatternContext> pattern() {
			return getRuleContexts(PatternContext.class);
		}
		public PatternContext pattern(int i) {
			return getRuleContext(PatternContext.class,i);
		}
		public List<TerminalNode> TIMES() { return getTokens(CatalogParser.TIMES); }
		public TerminalNode TIMES(int i) {
			return getToken(CatalogParser.TIMES, i);
		}
		public List<TerminalNode> DIV() { return getTokens(CatalogParser.DIV); }
		public TerminalNode DIV(int i) {
			return getToken(CatalogParser.DIV, i);
		}
		public MultdivContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_multdiv; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitMultdiv(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MultdivContext multdiv() throws RecognitionException {
		MultdivContext _localctx = new MultdivContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_multdiv);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(114);
			pattern();
			setState(119);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==TIMES || _la==DIV) {
				{
				{
				setState(115);
				_la = _input.LA(1);
				if ( !(_la==TIMES || _la==DIV) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				setState(116);
				pattern();
				}
				}
				setState(121);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PatternContext extends ParserRuleContext {
		public List<PropertyContext> property() {
			return getRuleContexts(PropertyContext.class);
		}
		public PropertyContext property(int i) {
			return getRuleContext(PropertyContext.class,i);
		}
		public List<TerminalNode> LPAREN() { return getTokens(CatalogParser.LPAREN); }
		public TerminalNode LPAREN(int i) {
			return getToken(CatalogParser.LPAREN, i);
		}
		public List<TerminalNode> RPAREN() { return getTokens(CatalogParser.RPAREN); }
		public TerminalNode RPAREN(int i) {
			return getToken(CatalogParser.RPAREN, i);
		}
		public PatternContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_pattern; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitPattern(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PatternContext pattern() throws RecognitionException {
		PatternContext _localctx = new PatternContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_pattern);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			property();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==LPAREN) {
				{
				{
				setState(123);
				match(LPAREN);
				setState(124);
				property();
				setState(125);
				match(RPAREN);
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class PropertyContext extends ParserRuleContext {
		public List<BasicContext> basic() {
			return getRuleContexts(BasicContext.class);
		}
		public BasicContext basic(int i) {
			return getRuleContext(BasicContext.class,i);
		}
		public List<TerminalNode> PERIOD() { return getTokens(CatalogParser.PERIOD); }
		public TerminalNode PERIOD(int i) {
			return getToken(CatalogParser.PERIOD, i);
		}
		public PropertyContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_property; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitProperty(this);
			else return visitor.visitChildren(this);
		}
	}

	public final PropertyContext property() throws RecognitionException {
		PropertyContext _localctx = new PropertyContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_property);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			basic();
			setState(137);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PERIOD) {
				{
				{
				setState(133);
				match(PERIOD);
				setState(134);
				basic();
				}
				}
				setState(139);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class BasicContext extends ParserRuleContext {
		public TerminalNode ID() { return getToken(CatalogParser.ID, 0); }
		public TerminalNode VAR() { return getToken(CatalogParser.VAR, 0); }
		public TerminalNode NUMBER() { return getToken(CatalogParser.NUMBER, 0); }
		public TerminalNode STRING() { return getToken(CatalogParser.STRING, 0); }
		public TerminalNode MINUS() { return getToken(CatalogParser.MINUS, 0); }
		public BasicContext basic() {
			return getRuleContext(BasicContext.class,0);
		}
		public TerminalNode TRUE() { return getToken(CatalogParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(CatalogParser.FALSE, 0); }
		public TerminalNode LPAREN() { return getToken(CatalogParser.LPAREN, 0); }
		public StmtContext stmt() {
			return getRuleContext(StmtContext.class,0);
		}
		public TerminalNode RPAREN() { return getToken(CatalogParser.RPAREN, 0); }
		public BasicContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_basic; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitBasic(this);
			else return visitor.visitChildren(this);
		}
	}

	public final BasicContext basic() throws RecognitionException {
		BasicContext _localctx = new BasicContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_basic);
		int _la;
		try {
			setState(148);
			switch (_input.LA(1)) {
			case NUMBER:
			case ID:
			case VAR:
			case STRING:
				enterOuterAlt(_localctx, 1);
				{
				setState(140);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << NUMBER) | (1L << ID) | (1L << VAR) | (1L << STRING))) != 0)) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				break;
			case MINUS:
				enterOuterAlt(_localctx, 2);
				{
				setState(141);
				match(MINUS);
				setState(142);
				basic();
				}
				break;
			case TRUE:
			case FALSE:
				enterOuterAlt(_localctx, 3);
				{
				setState(143);
				_la = _input.LA(1);
				if ( !(_la==TRUE || _la==FALSE) ) {
				_errHandler.recoverInline(this);
				} else {
					consume();
				}
				}
				break;
			case LPAREN:
				enterOuterAlt(_localctx, 4);
				{
				setState(144);
				match(LPAREN);
				setState(145);
				stmt();
				setState(146);
				match(RPAREN);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ForeachContext extends ParserRuleContext {
		public TerminalNode FOREACH() { return getToken(CatalogParser.FOREACH, 0); }
		public TerminalNode VAR() { return getToken(CatalogParser.VAR, 0); }
		public FilelistContext filelist() {
			return getRuleContext(FilelistContext.class,0);
		}
		public TerminalNode LBRACE() { return getToken(CatalogParser.LBRACE, 0); }
		public TerminalNode RBRACE() { return getToken(CatalogParser.RBRACE, 0); }
		public TerminalNode IN() { return getToken(CatalogParser.IN, 0); }
		public TerminalNode INSIDE() { return getToken(CatalogParser.INSIDE, 0); }
		public SortContext sort() {
			return getRuleContext(SortContext.class,0);
		}
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public List<TerminalNode> SEMI() { return getTokens(CatalogParser.SEMI); }
		public TerminalNode SEMI(int i) {
			return getToken(CatalogParser.SEMI, i);
		}
		public ForeachContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_foreach; }
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof CatalogVisitor ) return ((CatalogVisitor<? extends T>)visitor).visitForeach(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ForeachContext foreach() throws RecognitionException {
		ForeachContext _localctx = new ForeachContext(_ctx, getState());
		enterRule(_localctx, 22, RULE_foreach);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(150);
			match(FOREACH);
			setState(151);
			match(VAR);
			setState(152);
			_la = _input.LA(1);
			if ( !(_la==IN || _la==INSIDE) ) {
			_errHandler.recoverInline(this);
			} else {
				consume();
			}
			setState(153);
